Solved Vertical Align Problem

--- a/Explanination-Assignments/Block-2-Positioning-Using-Inline-Block/assest/stylesheet/main.css
+++ b/Explanination-Assignments/Block-2-Positioning-Using-Inline-Block/assest/stylesheet/main.css
@@ -38,11 +38,17 @@ footer {
 
 .nav {
     width: 60%;
+    vertical-align: middle;
+}
+
+.nav ul {
+    vertical-align: middle;
 }
 
 .nav li {
     display: inline-block;
     margin: 0 12px;
+    vertical-align: middle;
 }
 
 .logo a,
@@ -51,20 +57,17 @@ footer {
     text-decoration: none;
     color: #fff;
     padding: 5px 10px;
+    vertical-align: middle;
+}
+
+.nav a {
+    font-size: 24px;
 }
 
 .logo a {
     font-size: 42px;
+    line-height: 42px;
     border: 2px dashed #f0f0f0;
-}
-
-.nav {
-    font-size: 24px;
-    vertical-align: middle;
-}
-
-.nav ul {
-    vertical-align: middle;
 }
 
 /* Main */
