--- a/Explanination-Assignments/Block-5-Positioning-Using-float-and-clearfix-hack/assests/stylesheets/main.css
+++ b/Explanination-Assignments/Block-5-Positioning-Using-float-and-clearfix-hack/assests/stylesheets/main.css
@@ -52,6 +52,7 @@ footer {
     text-decoration: none;
     color: #fff;
     padding: 5px 10px;
+    line-height: 24px;
 }
 
 .logo a {
@@ -60,7 +61,7 @@ footer {
 }
 
 .nav {
-    font-size: 24px;;
+    font-size: 24px;
 }
 
 
